<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    tools:context="br.com.opet.tds.lembretesapp.Activity.MainActivity">

    <EditText
        android:id="@+id/edit_titulo"
        android:hint="@string/hintTituloNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_texto"
        android:hint="@string/hintTextoNota"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textDataNota"
        android:hint="@string/hintDataNota"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/checkLembrarNota"
        android:text="@string/checkLembrarNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/spinnerPrioridade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/array_prioridades"
        android:spinnerMode="dialog" />
    <Button
        android:id="@+id/btnSalvarNota"
        android:text="@string/btnSalvarNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        tools:listitem="@layout/recyclerview_item" />

</LinearLayout>
